update image urls

--- a/src/content/projects/4-d3.md
+++ b/src/content/projects/4-d3.md
@@ -4,5 +4,5 @@ title: NYC District 3 Schools
 img_alt: project image alt text
 link: https://doed3.org/
 tags: ['React', 'Mapbox', 'Django']
-img: '../src/assets/images/d3.png'
+img: 'https://marioag-portfolio.s3.amazonaws.com/img/d3.png'
 ---
